apps/production/skripsi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: skripsi
  labels:
    app: skripsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skripsi
  template:
    metadata:
      labels:
        app: skripsi
    spec:
      containers:
        - name: skripsi
          image: ghcr.io/pt-sinan-akbar/be-clustering:e120c7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1500m"
