apps/production/skripsi/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: skripsi-service
spec:
  selector:
    app: skripsi
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
