apps/production/skripsi/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skripsi
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: skrispi-api
  hostnames:
    - api.skrispi.mraditya.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: skripsi-service
          namespace: prod
          port: 80
